--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <body>
         <div class="box">
+            <!-- note app -->
             <h1>Notes</h1>
             <button id="createbtn">Create Note</button>
         </div>
